# ouro

./: .gitignore  Dockerfile  GUIDE.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  SUMMARY.md  autonomous.py  brain.py  build-dmg.sh  build-mac-app.sh  build-standalone.sh  cache_manager.py  check_imports.py  cleanup.bat  cleanup.py  config.py  db_manager.py  final_cleanup.sh  ideas.md  initialize_faiss.py  install.py  llm_wrapper.py  main.py  ouro.py  package-lock.json  package.json  pyproject.toml  queue_manager.py  requirements.txt  reset.sh  run.bat  run.sh  run_ouro.sh  setup.py  show_path.py  start_ouro.sh  test.py  test.sh  (+2 more)
assets/: README.md  icon.icns
config/: config.yaml
core/: config.yaml  docker-compose.yml  start_server.py
data/conversations/: conversation_20250308_061025.jsonl
data/documents/: sample.txt
dependencies/: install_deps_linux.sh  install_deps_mac.sh
docs/: architecture.txt  logo.txt
examples/: __init__.py  custom_usage.py
ouro/: .gitignore  __init__.py  __main__.py  agent.py  api.py  config.py  constants.py  document_loader.py  embeddings.py  embeddings.py.bak  llm.py  llm.py.bak  logger.py  main.py  rag.py  web_search.py  web_ui.py
ouro/static/: script.js  style.css
ouro/templates/: index.html
src/: __init__.py  __main__.py  config.py  document_loader.py  embeddings.py  llm.py  logger.py  main.py  rag.py
src/main/: index.js  preload.js
src/ui/: index.html
src/ui/css/: styles.css
src/ui/js/: installer.js
tests/: __init__.py  test_basic.py
web/: app.js  index.html  style.css
