[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouro"
version = "3.0.0"
description = "Privacy-First Local RAG System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ouro Team"}
]
maintainers = [
    {name = "roBlock", email = "roblock@github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Retrieval",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.16.4",
    "langchain>=0.0.267",
    "langchain-core>=0.1.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "rich>=13.4.2",
    "tqdm>=4.65.0",
    "PyPDF2>=3.0.1",
    "unstructured>=0.10.0",
    "accelerate>=0.22.0",
    "bitsandbytes>=0.41.0; platform_system != 'Darwin'",
    "safetensors>=0.3.2",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
extras = [
    "qdrant-client>=1.0.0",
    "chromadb>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/roBlockweb/ouro"
"Bug Tracker" = "https://github.com/roBlockweb/ouro/issues"
"Documentation" = "https://github.com/roBlockweb/ouro/blob/main/GUIDE.md"

[tool.setuptools]
packages = ["ouro"]

[project.scripts]
ouro = "ouro.main:main"